- assets 링크 작업 중

--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -492,7 +492,9 @@
 				overflow:hidden;
 				width:calc(20% - 20px);
 				@media(max-width:1390px){ width:calc(25% - 20px); }
-				//@media(max-width:1340px){ width:calc(33.333% - 20px); }
+				@media(max-width:1100px){ width:calc(33.333% - 20px); }
+				@media(max-width:860px){ width:calc(50% - 20px); }
+				@media(max-width:560px){ width:calc(100% - 20px); }
 
 				margin:20px 10px 0; padding:@d2_pd;
 				line-height:18px;
