- assets 링크 작업 중

--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -688,13 +688,13 @@
 
 
 	//작업용(사이트맵 완료 후 삭제)
-	/**/
+	/*
 	html {overflow:hidden;}
 	.hd_assetsLink {
 		.assetsLink_area {left:0 !important; top:0 !important; opacity:1 !important; transform:scale(1,1) !important; overflow-y:scroll !important;}
 		.assetsLink_in {transform:scale(1,1) !important;}
 	}
-
+*/
 	//작업용(사이트맵 완료 후 삭제)
 
 
